remover configuracion a base de datos

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@
 #################################################
 /config/config.js
 /public/webroot/bower_components
-/node_modules
+/node_modulesconfig/config.js
