--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # User specific & automatically generated files #
 #################################################
-/config/config.js
-/public/webroot/bower_components
-/node_modulesconfig/config.js
+config/config.js
+public/webroot/bower_components
+config/config.js
