--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@
 #################################################
 config/config.js
 public/webroot/bower_components
+node_modules
 config/config.js
