--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # User specific & automatically generated files #
 #################################################
-config/config.js
-public/webroot/bower_components
-node_modules
+public/webroot/bower_components/
+node_modules/
 config/config.js
