--- a/public/bower.json
+++ b/public/bower.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "angular": "^1.5.6",
     "angular-material": "^1.0.9",
-    "angular-ui-router": "^0.3.1"
+    "angular-ui-router": "^0.3.1",
+    "highcharts-ng": "^0.0.11",
+    "highcharts": "^4.2.5"
   }
 }
